--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "express_practice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon app.js"
+    "start": "npx nodemon -e js, html app.js"
   },
   "keywords": [],
   "author": "minji",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nunjucks": "^3.2.2"
   },
   "devDependencies": {}
 }
